# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-0a052a8b6e5d5a299078f2152d7e1a49c8829342e99fe57c254a5aab13aff27c.json  query-0bc6a1d3d17d0721e8e8a6d3462bad510ac6bc4f89403b3fdd278297303f8ac3.json  query-1d17215836d56571abce720764dd81b7b2a1bd92a7efc5533791530a68d80dcb.json  query-56fbe113a3b227300912e6a185947ffbe9e0f41c9a802ad1c6f1d9fa7fe1ac40.json  query-5b08a55856d11982d00c31579cf2ef0be460d81bb3310bac98621e85c3ca1444.json  query-692a69b0df24f8353f6b4c36bf01424f118457c125201790d33c2d954541b370.json  query-e781141958ce050da11215abd7f9fad746d2a3d088aef04e13b7ad1179549be5.json  query-f23959dfb07b0f7e025f560566f5eb48bd8ce1ed6c17e1050236d61befe32a83.json  query-fa91cfb05e5b1fb2f785386c1df9db216b346fa98af10c7a2e153c1e5d19c07c.json
configuration/: base.yaml  production.yaml
migrations/: 20240928093709_seed_user.sql  20240930102453_create_idempotency_table.sql  20241001014633_create_newsletter_issues_table.sql  20241001014810_create_issue_delivery_queue_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: newsletter.rs  subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
(+3 files in other folders)
