[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.115"
config = { version = "0.13", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4"
unicode-segmentation = "1"
claims = "0.7"
validator = "0.18"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1.0.40"
base64 = "0.21"
argon2 = { version = "0.5", features = ["std"] }
actix-web-flash-messages = { version = "0.5", features = ["cookies"] }
actix-session = { version = "0.10", features = ["redis-session-rustls"] }
serde_json = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
fake = "2.9"
claims = "0.7"
once_cell = "1.7.2"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
linkify = "0.10"
serde_urlencoded = "0.7.1"
